# Perception_based_navigation

./: README.md
gazebo_gefier_r1-main/src/grid_world/: CMakeLists.txt  package.xml
gazebo_gefier_r1-main/src/grid_world/worlds/: grid_world_FINAL.sdf
gazebo_gefier_r1-main/src/mini_r1_v1_gz/: CMakeLists.txt
gazebo_gefier_r1-main/src/mini_r1_v1_gz/config/: ros_gz_bridge.yaml
gazebo_gefier_r1-main/src/mini_r1_v1_gz/launch/: grand_mission.launch.py  sim.launch.py
gazebo_gefier_r1-main/src/mini_r1_v1_gz/scripts/: mission_controller.py  mit_wall_follower.py  mit_wall_follower_right.py  vision_core.py
gazebo_gefier_r1-main/src/navigation/: CMakeLists.txt  package.xml
gazebo_gefier_r1-main/src/navigation/config/: amcl_localization.yaml  explore.yaml  navigation.yaml  slam_toolbox_localization.yaml  slam_toolbox_mapping.yaml
gazebo_gefier_r1-main/src/navigation/launch/: localization.launch.py  localization_slam_toolbox.launch.py  mapping.launch.py  navigation.launch.py  navigation_with_slam.launch.py
gazebo_gefier_r1-main/src/navigation/maps/: map.pgm  map.yaml
