<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grid_world</name>
  <version>0.0.0</version>
  <description>World package for mini_r1</description>
  <maintainer email="aakash@todo.todo">aakash</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
    <gazebo_ros gazebo_media_path="${prefix}" />
  </export>
</package>
